# CS61C-Spring-2019

lab/lab00/: answers.txt
lab/lab01/: hello  int_hello
lab/lab01/hello.dSYM/Contents/Resources/DWARF/: hello
lab/lab01/int_hello.dSYM/Contents/Resources/DWARF/: int_hello
lab/lab02/: bit_ops  lfsr  ll_cycle  vector-test
lab/lab02/bit_ops.dSYM/Contents/Resources/DWARF/: bit_ops
lab/lab02/lfsr.dSYM/Contents/Resources/DWARF/: lfsr
lab/lab02/ll_cycle.dSYM/Contents/Resources/DWARF/: ll_cycle
lab/lab03/: factorial.s  lab3_ex2_assembly.s  list_map.s
lab/lab05/: discrete_fn.s  megalistmanips.s
lab/lab06/: FSM.circ  p1.circ  p2.circ  p4.circ  p5.circ
lab/lab07/: exercise1.circ
lab/lab08/: a.out  transpose.c
lab/lab11/openmp/: dotp.c  v_add.c
lab/lab11/simd/: common.h
lab/lab12/: exercise1.go  exercise2.go  exercise3.go
lab/lab12/testing/: functions_test.go
project/project-1-2-kanakgarg/: ast.c  parser-errors.c  parser.c
project/project-1-kanakgarg/: 61ccc  CMakeLists.txt  string-helpers.c  tokenizer-errors.c  tokenizer.c
project/project-1-kanakgarg/tests/cunit/: test.c
project/project-1-kanakgarg/tests/lexer/sample-tests/: good-sample.61c
project/project-2-kanakgarg/: 61Ccc  cgen.c
project/project-3-kanakgarg/part1/: alu.circ  regfile.circ
project/project-3-kanakgarg/part2/: cpu.circ
project/project-4-kanakgarg/: gmon.out  layers.c  network.c  volume.c
project/sp19-proj5-kanakgarg/: server.go  server_test.go  server_test.go.old
